--- a/ui/addBranchUtil.ui
+++ b/ui/addBranchUtil.ui
@@ -44,10 +44,10 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>30</x>
       <y>50</y>
-      <width>181</width>
-      <height>91</height>
+      <width>221</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -61,10 +61,10 @@ color: white;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>140</y>
-      <width>301</width>
-      <height>41</height>
+      <x>30</x>
+      <y>130</y>
+      <width>371</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -78,7 +78,7 @@ color: white</string>
    <widget class="QPushButton" name="backButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>390</x>
       <y>130</y>
       <width>51</width>
       <height>51</height>
@@ -128,7 +128,7 @@ color: rgb(222,24,24);
 </string>
      </property>
      <property name="text">
-      <string>Add Branch Util</string>
+      <string>Add Branch</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_17">
@@ -136,8 +136,8 @@ color: rgb(222,24,24);
       <rect>
        <x>60</x>
        <y>120</y>
-       <width>421</width>
-       <height>61</height>
+       <width>441</width>
+       <height>81</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -208,7 +208,7 @@ color: #808080</string>
       <rect>
        <x>70</x>
        <y>230</y>
-       <width>121</width>
+       <width>151</width>
        <height>16</height>
       </rect>
      </property>
