--- a/ui/addEmployeeUtil.ui
+++ b/ui/addEmployeeUtil.ui
@@ -44,10 +44,10 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>30</x>
       <y>50</y>
-      <width>181</width>
-      <height>91</height>
+      <width>221</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -61,10 +61,10 @@ color: white;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>140</y>
-      <width>301</width>
-      <height>41</height>
+      <x>30</x>
+      <y>130</y>
+      <width>381</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -78,7 +78,7 @@ color: white</string>
    <widget class="QPushButton" name="backButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>400</x>
       <y>130</y>
       <width>51</width>
       <height>51</height>
@@ -118,7 +118,7 @@ border-radius: 10px</string>
       <rect>
        <x>60</x>
        <y>50</y>
-       <width>321</width>
+       <width>351</width>
        <height>51</height>
       </rect>
      </property>
@@ -128,7 +128,7 @@ color: rgb(222,24,24);
 </string>
      </property>
      <property name="text">
-      <string>Add Employee Util</string>
+      <string>Add Employee</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_17">
@@ -136,8 +136,8 @@ color: rgb(222,24,24);
       <rect>
        <x>60</x>
        <y>120</y>
-       <width>421</width>
-       <height>61</height>
+       <width>391</width>
+       <height>71</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -300,7 +300,7 @@ color: #808080</string>
       <rect>
        <x>70</x>
        <y>390</y>
-       <width>121</width>
+       <width>141</width>
        <height>16</height>
       </rect>
      </property>
@@ -392,7 +392,7 @@ color: #808080</string>
       <rect>
        <x>70</x>
        <y>560</y>
-       <width>121</width>
+       <width>131</width>
        <height>16</height>
       </rect>
      </property>
